--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ decorator==5.1.1
 Django==4.0.2
 django-autoslug==1.9.8
 djangorestframework==3.13.1
+djangorestframework-simplejwt==5.0.0
 executing==0.8.2
 jedi==0.18.1
 matplotlib-inline==0.1.3
@@ -20,6 +21,7 @@ prompt-toolkit==3.0.28
 ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.11.2
+PyJWT==2.3.0
 python-decouple==3.6
 pytz==2021.3
 six==1.16.0
