--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,30 @@
 asgiref==3.5.0
 asttokens==2.0.5
+attrs==21.4.0
 backcall==0.2.0
 black==22.1.0
+certifi==2021.10.8
+charset-normalizer==2.0.12
 click==8.0.4
+coreapi==2.3.3
+coreschema==0.0.4
 decorator==5.1.1
 Django==4.0.2
 django-autoslug==1.9.8
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.0.0
+drf-yasg==1.20.0
 executing==0.8.2
+idna==3.3
+inflection==0.5.1
+itypes==1.2.0
 jedi==0.18.1
+Jinja2==3.0.3
+jsonschema==4.4.0
+MarkupSafe==2.1.0
 matplotlib-inline==0.1.3
 mypy-extensions==0.4.3
+packaging==21.3
 parso==0.8.3
 pathspec==0.9.0
 pexpect==4.8.0
@@ -22,12 +35,21 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.11.2
 PyJWT==2.3.0
+pyparsing==3.0.7
+pyrsistent==0.18.1
 python-decouple==3.6
 pytz==2021.3
+PyYAML==6.0
+requests==2.27.1
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.6
 six==1.16.0
 sqlparse==0.4.2
 stack-data==0.2.0
+swagger-spec-validator==2.7.4
 tomli==2.0.1
 traitlets==5.1.1
 typing_extensions==4.1.1
+uritemplate==4.1.1
+urllib3==1.26.8
 wcwidth==0.2.5
